[ADD]: roncal resources are added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,11 @@
 
 
 # Variables
-set(LIB library_name)
-set(HEADERS "")
-set(SOURCES "")
+set(LIB ${PROJECT_NAME})
+set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME})
+set(HEADERS ${INCLUDE_DIR}/base.hpp)
+set(HEADERS ${INCLUDE_DIR}/roncal.hpp)
+set(SOURCES roncal.cpp)
 
 
 # Find Packages
