[UPDATE]: Base call interface is defined

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,9 @@
 
 # Variables
 set(LIB ${PROJECT_NAME})
-set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME})
-set(HEADERS ${INCLUDE_DIR}/base.hpp)
-set(HEADERS ${INCLUDE_DIR}/roncal.hpp)
+set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
+set(HEADERS ${INCLUDE_DIR}/${PROJECT_NAME}/base.hpp)
+set(HEADERS ${INCLUDE_DIR}/${PROJECT_NAME}/roncal.hpp)
 set(SOURCES roncal.cpp)
 
 
@@ -20,6 +20,9 @@ add_library(${LIB} STATIC ${SOURCES} ${HEADERS})
 
 
 # Include Directories
+target_include_directories(${LIB}
+    PUBLIC ${INCLUDE_DIR}
+)
 
 
 # Libraries
