[TEST]: Essential test cases are declared

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,18 @@
 # Options
 option(BUILD_TESTS "To build the tests" ON)
+if (NOT BUILD_TESTS)
+    return()
+endif()
+
+
+# Find Packages
+find_package(GTest REQUIRED)
 
 
 # Variables
 set(TEST test_${PROJECT_NAME})
 set(SOURCES test.cpp)
 set(HEADERS "")
-
-
-# Find Packages
 
 
 # Sub Directories
@@ -19,8 +23,16 @@ add_executable(${TEST} ${SOURCES} ${HEADERS})
 
 
 # Include Directories
+target_include_directories(${TEST} 
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/include/
+)
 
 
 # Libraries
+target_link_libraries(${TEST}
+    PRIVATE
+    GTest::gtest
+)
 
 
